--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "lite": "lite-server",
-    "postinstall": "typings install",
     "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings"
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
   "license": "ISC",
   "dependencies": {
@@ -33,9 +32,10 @@
     "bootstrap": "^3.3.6"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.3",
-    "typings":"^1.3.2"
+    "typescript": "^2.0.3"
   }
 }
