--- a/app.json
+++ b/app.json
@@ -3,6 +3,5 @@
   "description": "created by ariel duarte",
   "repository": "https://github.com/reyduar/bookmark-dev",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
-  "image": "heroku/nodejs"
+  "keywords": ["angular2", "express", "node"]
 }
