--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
       "node": "6.9.1"
     },
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+  "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "lite": "lite-server",
-    "tsc": "tsc",
     "tsc": "tsc",
     "tsc:w": "tsc -w"
   },
