--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookmark-dev",
+  "name": "lyrics-app",
   "version": "0.0.0",
   "author": "ariel duarte",
   "private": true,
@@ -15,11 +15,6 @@
     "url": "https://github.com/reyduar/bookmark-dev"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "morgan": "~1.6.1",
     "@angular/common": "~2.1.1",
     "@angular/compiler": "~2.1.1",
     "@angular/core": "~2.1.1",
@@ -29,18 +24,24 @@
     "@angular/platform-browser-dynamic": "~2.1.1",
     "@angular/router": "~3.1.1",
     "@angular/upgrade": "~2.1.1",
-    "angular-in-memory-web-api": "~0.1.13",
-    "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.25",
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
+    "angular-in-memory-web-api": "~0.1.13",
+    "angular2-froala-wysiwyg": "^2.5.0-1",
+    "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.6",
+    "compression": "^1.6.2",
+    "cookie-parser": "~1.3.5",
+    "core-js": "^2.4.1",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "morgan": "~1.6.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
     "systemjs-builder": "^0.15.17",
     "typescript": "^2.0.3",
     "yargs": "^4.7.1",
-    "compression": "^1.6.2",
-    "bootstrap": "^3.3.6"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
